fix bottom margin white space

--- a/src/css/ToDo.css
+++ b/src/css/ToDo.css
@@ -3,7 +3,7 @@
   display: flex;
   font-size: inherit;
   justify-content: center;
-  margin-bottom: 0.75em;
+  padding-bottom: 0.75em;
 }
 
 .todo-entry-container button {
